--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,19 @@
 {
   "name": "adom-header",
-  "description": "Header for a website",
+  "version": "1.0.0",
+  "description": "A component description",
   "main": "adom-header.html",
+  "keywords": [],
+  "ignore": [],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
-    "iron-image": "PolymerElements/iron-image#^1.2.5",
+    "polymer": "Polymer/polymer#^1.6.0",
     "iron-icon": "PolymerElements/iron-icon#^1.0.12"
   },
   "devDependencies": {
-    "adom-demo": "https://github.com/ADominguezes/adom-demo.git#^0.0.2",
+    "adom-demo": "https://github.com/ADominguezes/adom-demo.git#new-adom-demo",
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.5",
-    "web-component-tester": "^4.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "web-component-tester": "Polymer/web-component-tester#^4.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   }
 }
